# govee-cli

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  GVH600887FB (1).txt  GVH600887FB.txt  README.md  SPEC.md  debug_h6008.py  discovery.py  govee-bulb-issues.md  pyproject.toml  requirements-dev.txt  requirements.txt  scan_adv_detail.py  scan_bulbs.py  scan_now.py  test_alt_uuid.py  test_btp_handshake.py  test_cli_alt.py  test_h6008_alt_uuid.py  test_h6008_commands.py  test_h6008_cron.py  test_packets.py  test_static_mac.py  test_static_mac.sh  watch_notifications.py
.github/workflows/: ci.yml
docs/: BLE_PROTOCOL_RESEARCH.md  H6008-RESEARCH-TRACKER.md  H6008-STATUS.md  H6008_PROTOCOL.md
govee_cli/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
govee_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
govee_cli/ble/: __init__.py  gatt.py  protocol.py  scanner.py
govee_cli/commands/: brightness.py  color.py  completion.py  config_cmd.py  daemon.py  effect.py  group.py  info.py  music.py  power.py  record.py  replay.py  scan.py  scene.py  schedule.py  segments.py  temp.py
govee_cli/devices/: __init__.py  h6008.py  h6056.py
govee_cli/scenes/: capture.py  effects.py
govee_cli/schedule/: scheduler.py
scenes/: demo.json  ocean.json  party.json  purple_glow.json  sunrise.json
tests/: __init__.py  test_config.py  test_devices.py  test_protocol.py
