[project]
name = "govee-cli"
version = "0.1.0"
description = "A CLI tool to control Govee smart lights over Bluetooth Low Energy (BLE)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luke Edwards", email = "edwards.lukec@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.21.0",
    "click>=8.1.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
govee-cli = "govee_cli.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["call-arg"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["N818"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"govee_cli/cli.py" = ["E402"]
